# csml-engine

./: Cargo.toml  README.md  REUSE.toml
.github/workflows/: rust.yml
csml_engine/: Cargo.toml
csml_engine/migrations/postgresql/2023-10-20-122950_fix_table_name/: down.sql  up.sql
csml_engine/migrations/sqlite/2021-08-30-130425_csml_initial_setup/: down.sql  up.sql
csml_engine/src/: data.rs  encrypt.rs  error_messages.rs  init.rs  lib.rs  models.rs  utils.rs
csml_engine/src/data/: filter.rs  future.rs  models.rs
csml_engine/src/data/models/: interpreter_actions.rs
csml_engine/src/db_connectors/: mod.rs  utils.rs
csml_engine/src/db_connectors/postgresql/: mod.rs  models.rs  schema.rs
csml_engine/src/db_connectors/sqlite/: mod.rs
csml_engine/src/future/: init.rs  interpreter_actions.rs  mod.rs  send.rs  utils.rs
csml_engine/src/future/db_connectors/: bot.rs  clean_db.rs  conversations.rs  db_test.rs  memories.rs  messages.rs  mod.rs  state.rs  user.rs
csml_engine/src/future/db_connectors/postgresql/: bot.rs  conversations.rs  expired_data.rs  memories.rs  messages.rs  mod.rs  pagination.rs  state.rs
csml_engine/src/future/db_connectors/sea_orm/: bot.rs  conversations.rs  expired_data.rs  memories.rs  messages.rs  mod.rs  models.rs  state.rs  util.rs
csml_engine_db/: Cargo.toml
csml_engine_db/src/: lib.rs
csml_engine_db/src/conversation/: mutation.rs  query.rs
csml_engine_db/src/messages/: mutation.rs  query.rs
csml_engine_entity/: Cargo.toml
csml_engine_entity/src/: bot_version.rs  conversation.rs  lib.rs  memory.rs  messages.rs  state.rs
csml_interpreter/: Cargo.toml
csml_interpreter/CSML/basic_test/: event.csml  object.csml
csml_interpreter/CSML/basic_test/bot/: remember_event.csml
csml_interpreter/CSML/basic_test/built-in/: time.csml
csml_interpreter/CSML/basic_test/numerical_operation/: addition.csml  division.csml
csml_interpreter/CSML/basic_test/stdlib/: array.csml  string.csml  uri.csml
csml_interpreter/CSML/examples/: metadata.csml
csml_interpreter/examples/: bot.rs  event.rs  factorial.rs  hello_world.rs  memory.rs  metadata.rs  modules.rs
csml_interpreter/src/: data.rs  error_format.rs  fold_bot.rs  interpreter.rs  lib.rs  linter.rs  parser.rs
csml_interpreter/src/data/: ast.rs  context.rs  core.rs  csml_bot.rs  csml_flow.rs  csml_logs.rs  csml_result.rs  error_info.rs  event.rs  fn_args_type.rs  hold.rs  literal.rs  memories.rs  message.rs  message_data.rs  msg.rs  position.rs  primitive.rs  tokens.rs  warnings.rs
csml_interpreter/src/data/primitive/: array.rs  boolean.rs  closure.rs  common.rs  float.rs  int.rs  null.rs  object.rs  string.rs  tools.rs  tools_crypto.rs  tools_jwt.rs  tools_smtp.rs  tools_time.rs  utils.rs
csml_interpreter/src/error_format/: data.rs
csml_interpreter/src/interpreter/: ast_interpreter.rs  builtins.rs  components.rs  function_scope.rs  json_to_rust.rs  variable_handler.rs
csml_interpreter/src/interpreter/ast_interpreter/: actions.rs  for_loop.rs  if_statement.rs  while_loop.rs
csml_interpreter/src/interpreter/builtins/: api.rs  crypto.rs  exists.rs  format.rs  functions.rs  http_builtin.rs  jwt.rs  smtp.rs  time.rs  tools.rs
csml_interpreter/src/interpreter/components/: audio.rs  button.rs  card.rs  carousel.rs  file.rs  image.rs  question.rs  text.rs  typing.rs  url.rs  video.rs  wait.rs
csml_interpreter/src/interpreter/variable_handler/: expr_to_literal.rs  forget_memories.rs  gen_generic_component.rs  gen_literal.rs  interval.rs  match_literals.rs  memory.rs  operations.rs  resolve_csml_object.rs
csml_interpreter/src/linter/: core.rs  data.rs
csml_interpreter/src/parser/: parse_actions.rs  parse_braces.rs  parse_built_in.rs  parse_closure.rs  parse_comments.rs  parse_constant.rs  parse_foreach.rs  parse_functions.rs  parse_goto.rs  parse_group.rs  parse_idents.rs  parse_if.rs  parse_import.rs  parse_insert.rs  parse_literal.rs  parse_object.rs  parse_path.rs  parse_previous.rs  parse_scope.rs  parse_string.rs  parse_var_types.rs  parse_while_loop.rs  state_context.rs  step_checksum.rs  tools.rs
csml_interpreter/src/parser/operator/: parse_operator.rs  tools.rs
csml_interpreter/tests/: addition.rs  array.rs  as.rs  audio.rs  base64.rs  break.rs  carousel.rs  closures.rs  context.rs  continue.rs  debug.rs  division.rs  do.rs  equal.rs  event.rs  find.rs  foreach.rs  forget.rs  functions.rs  generic_component.rs  goto.rs  goto_vars.rs  greater.rs  greater_or_equal.rs  hex.rs  hold.rs  http.rs  if.rs  infinite_loop.rs  json_object.rs  length.rs  lower.rs  lower_or_equal.rs  mem_exists.rs  memory.rs  metadata.rs  multiplication.rs  number.rs  object.rs  object_lib.rs  (+21 more)
csml_interpreter/tests/support/: tools.rs
csml_migrations/: Cargo.toml
csml_migrations/src/: lib.rs  migrator.rs
csml_migrations/src/final_state/: csml_bot_versions.rs  csml_conversations.rs  csml_memories.rs  csml_messages.rs  csml_states.rs  mod.rs
csml_migrations/src/m20231019_000001_create_table/: csml_bot_versions.rs  csml_conversations.rs  csml_memories.rs  csml_messages.rs  csml_states.rs  mod.rs
csml_model/: Cargo.toml
csml_model/src/: lib.rs
test_helpers/: Cargo.toml
test_helpers/src/: postgresql.rs  sqlite.rs
test_helpers/src/util/: sqlite.rs
