[package]
name = "csml_engine"
version = "1.11.2"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Engine is a conversational engine designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
license = "Apache-2.0"
edition = "2024"

[features]
postgresql = ["diesel_postgresql"]
sqlite = ["diesel_sqlite"]
sea-orm = ["dep:sea-orm", "dep:csml_engine_entity", "dep:csml_engine_db", "async"]

async = ["reqwest", "futures"]
postgresql-async = ["postgresql", "diesel-async/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations", "async"]

diesel_postgresql = ["diesel/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations"] # "diesel/uuidv07",
diesel_sqlite = ["diesel/sqlite", "diesel/chrono", "diesel_migrations"]

# We don't actually use rustls but other pure rust implementations
rustls = ["ring", "aes-gcm"]

default = ["openssl"]

_dbtest = []

[dependencies.diesel_migrations]
version = "2.2.0"
optional = true

[dependencies.diesel]
version = "2.2.0"
optional = true

[dependencies.diesel-async]
version = "0.7.4"
optional = true

[dependencies.futures]
version = "0.3.31"
optional = true

[dependencies.reqwest]
version = "0.12.23"
features = ["json"]
optional = true

[dependencies.openssl]
version = "0.10.73"
features = ["vendored"]
optional = true

[dependencies.ring]
version = "0.17.14"
optional = true

[dependencies.aes-gcm]
version = "0.10.3"
optional = true

[dependencies.sea-orm]
version = "1.1.16"
features = ["macros", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "with-uuid", "with-json", "debug-print"]
optional = true

[dependencies.csml_engine_entity]
path = "../csml_engine_entity"
optional = true

[dependencies.csml_engine_db]
path = "../csml_engine_db"
optional = true

[dependencies]
async-stream = "0.3.6"
csml_interpreter = { version = "1.11.2", path = "../csml_interpreter" }
csml_model = { version = "0.1.0", path = "../csml_model" }
md-5 = "0.10.6"
chrono = { version = "0.4.42", features = ["serde"]}
rand = "0.9"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_derive = "1.0.226"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"]}
regex = "1.11.2"
base64 = "0.22.1"
hex = "0.4.3"
typed-builder = "0.23.2"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

bincode = "2.0.1"
tracing = "0.1.41"
num-traits = "0.2.19"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros"] }
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
serial_test = { version = "3.2.0", features = ["file_locks"] }
