[package]
name = "csml_engine_db"
version = "0.1.0"
edition = "2024"
authors = ["Sven Scheu <itssvens@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csml_engine_entity = { path = "../csml_engine_entity" }
sea-orm = { version = "1.1.16", features = ["macros", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "with-uuid", "with-json", "debug-print"] }
