[package]
name = "csml_interpreter"
version = "1.11.2"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Interpreter is the official interpreter for the CSML programming language, a DSL designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
readme = "README.md"
license = "Apache-2.0"
edition = "2024"

[lib]
name = "csml_interpreter"
crate-type = ["rlib"]

[dependencies]
csml_model = { version = "0.1.0", path = "../csml_model" }
nom_locate = "5.0.0"
nom = { version = "8" }
rand = "0.10.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
serde-xml-rs = "0.7.1"
html-escape = "0.2.13"
roxmltree_to_serde = "0.6.2"
phf = { version = "0.13.1", features = ["macros"]}
regex = "1.11.2"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
urlencoding = "2.1.3"
url = "2.5.7"

lettre = "0.11.18"

typetag = "0.2.20"
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
openssl = { version = "0.10.73", features = ["vendored"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v1"] }
tracing = "0.1.41"
num-traits = "0.2.19"

[[example]]
name = "hello_world"

[[example]]
name = "metadata"

[[example]]
name = "event"

[[example]]
name = "memory"

[[example]]
name = "factorial"

[[example]]
name = "bot"
